plot perf graphs & remove jepsen dependency