@@ -1,5 +1,6 @@
 package core.checker.checker;
 
+import core.checker.linearizability.Op;
 import core.checker.vo.Result;
 import util.Util;
 
@@ -14,7 +15,7 @@ import java.util.stream.Collectors;
  */
 public class SetFull implements Checker {
     boolean linearizable = false;
-    private Map checkerOpts;
+    private final Map checkerOpts;
 
     public SetFull(Map checkerOpts) {
         this.checkerOpts = checkerOpts;
@@ -23,81 +24,96 @@ public class SetFull implements Checker {
     @Override
     public Result check(Map test, List<Operation> history, Map opts) {
         history = history.stream().filter(h -> h.getProcess() >= 0).collect(Collectors.toList());
-        Map elements = Map.of(), reads = Map.of(), dups = Map.of();
+        Map<Object,SetFullElement> elements = new HashMap<>();
+        Map reads = new HashMap<>(), dups = new HashMap<>();
         for (Operation operation : history) {
             List<Map> res = red(elements, reads, dups, operation);
             elements = res.get(0);
             reads = res.get(1);
             dups = res.get(2);
         }
-        elements = new TreeMap(elements);
+        elements = new TreeMap<>(elements);
 
-        Map<String, Object> setResults = CheckerUtil.setFullResults(checkerOpts, (List<SetFullElement>) elements.values());
-        setResults.put("valid", dups.isEmpty() && (boolean) setResults.get("valid?"));
+        Map<String, Object> setResults = CheckerUtil.setFullResults(checkerOpts, new ArrayList<SetFullElement>(elements.values()));
+        Object valid;
+        if(!dups.isEmpty()){
+            valid=false;
+        }else {
+            valid=setResults.get("valid?");
+        }
+        setResults.put("valid?", valid);
         setResults.put("duplicated-count", dups.size());
         setResults.put("duplicated", dups);
         Result result = new Result();
-        result.setValid(dups.isEmpty() && (boolean) setResults.get("valid?"));
+        result.setValid(valid);
         result.setRes(setResults);
         return result;
     }
 
-    private List<Map> red(Map elements, Map reads, Map dups, Operation operation) {
-        List v = (List) operation.getValue();
-        Object p = operation.getProcess();
-        Object f = operation.getF();
-        Object type = operation.getType();
-        SetFullElement setFullElement = new SetFullElement(operation); //TODO check
-        if (f.equals("add")) {
-            if (type.equals("invoke")) {
+    private List<Map> red(Map<Object, SetFullElement> elements, Map<Integer, Operation> reads, Map<?, ?> dups, Operation operation) {
+        Object v = operation.getValue();
+        int p = operation.getProcess();
+        Operation.F f = operation.getF();
+        Operation.Type type = operation.getType();
+        if (f == Operation.F.ADD) {
+            if (type == Operation.Type.INVOKE) {
                 elements.put(v, CheckerUtil.setFullElement(operation));
             } else {
-                elements.put(v, setFullElement.setFullAdd(operation));
+                SetFullElement setFullElement = elements.get(v);
+                setFullElement.setFullAdd(operation);
+                elements.put(v, setFullElement);
             }
             return List.of(elements, reads, dups);
-        } else if (f.equals("read")) {
-            if (type.equals("invoke")) {
+        } else if (f == Operation.F.READ) {
+            if (type == Operation.Type.INVOKE) {
                 reads.put(p, operation);
                 return List.of(elements, reads, dups);
-            } else if (type.equals("fail")) {
+            } else if (type == Operation.Type.FAIL) {
                 reads.remove(p);
                 return List.of(elements, reads, dups);
-            } else if (type.equals("info")) {
+            } else if (type == Operation.Type.INFO) {
                 return List.of(elements, reads, dups);
-            } else if (type.equals("ok")) {
-                Map inv = (Map) reads.get(operation.getProcess());
-                Map<Object, Integer> frequencies = new HashMap();
-                for (Object value : v) {
-                    if (!frequencies.containsKey(value)) {
-                        frequencies.put(value, Collections.frequency(v, value));
+            } else if (type == Operation.Type.OK) {
+                Operation inv = reads.get(operation.getProcess());
+                Map<Object, Integer> newDups = new TreeMap<>();
+                List<?> valList;
+                if (v instanceof List) {
+                    valList = (List<?>) v;
+                } else if(v instanceof HashSet){
+                    valList= Arrays.asList(((HashSet<?>)v).toArray());
+                }else {
+                    valList = new ArrayList<>(List.of(v));
+                }
+                for (Object val : valList) {
+                    if (!newDups.containsKey(val)) {
+                        newDups.put(val, Collections.frequency(valList, val));
                     }
                 }
 
-                //TODO check
-                Map<Object, Integer> newDups = new TreeMap();
-                for (Map.Entry<Object, Integer> entry : frequencies.entrySet()) {
-                    Object k = entry.getKey();
-                    Integer value = entry.getValue();
-                    if (value < 1) {
-                        newDups.put(k, value);
-                    }
-                }
 
                 dups.forEach((key, value) -> newDups.merge(key, (int) value, (v1, v2) -> v1 > v2 ? v1 : v2));
 
-                v = Arrays.asList(new HashSet(v).toArray());
-                List finalV = v;
-                Function<Object[], Object[]> updateAll = o -> {
-                    Map element = (Map) o[0];
-                    ISetFullElement state = (ISetFullElement) o[1];
-                    if (element.containsKey(finalV)) {
-                        state.setFullReadPresent(inv, operation);
+                HashSet<?> vSet = new HashSet<>(new ArrayList<>(List.of(v)));
+                for (Object element : elements.keySet()) {
+                    SetFullElement state = elements.get(element);
+                    if (vSet.contains(element)) {
+                        elements.put(element, state.setFullReadPresent(inv, operation));
                     } else {
-                        state.setFullReadAbsent(inv, operation);
+                        elements.put(element, state.setFullReadAbsent(inv, operation));
                     }
-                    return new Object[]{element, state};
-                };
-                elements = Util.mapKv(updateAll, elements);
+                }
+
+                //                Function<Object[], Object[]> updateAll = o -> {
+                //                    Map element = (Map) o[0];
+                //                    ISetFullElement state = (ISetFullElement) o[1];
+                //                    if (element.containsKey(finalV)) {
+                //                        state.setFullReadPresent(inv, operation);
+                //                    } else {
+                //                        state.setFullReadAbsent(inv, operation);
+                //                    }
+                //                    return new Object[]{element, state};
+                //                };
+                //                elements = Util.mapKv(updateAll, elements);
                 return List.of(elements, reads, newDups);
             }
         }
